--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,23 +4,33 @@
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
 <button (click)="getInit()">Get Depart Data</button>
 
-<input (appPkDirective)="resultShow = $event"  [myurlcode]="'categorymaster'"  type="text" >
+<input
+  (appPkDirective)="resultShow = $event"
+  [myurlcode]="'categorymaster'"
+  type="text"
+/>
 <!-- {{ departmentData | json }} -->
 <!-- <div *ngFor="let item of departmentData | keyvalue">
   {{item | json }}
   
 </div>  -->
 <!-- {{ resultShow | json}} -->
-<button (click)="testSearch()">Search RX </button>
-<hr>
+<button (click)="testSearch()">Search RX</button>
+<hr />
 <table border="1" style="width:100%">
   <tr>
     <td>แผนกสินค้า</td>
     <td>:</td>
     <td>
-      <select name="department" (blur)="searchCategory()" 
-      [(ngModel)]='departmentName' >
-        <option *ngFor="let item of departmentData" value={{item.categorycode}}>
+      <select
+        name="department"
+        (blur)="searchCategory()"
+        [(ngModel)]="departmentName"
+      >
+        <option
+          *ngFor="let item of departmentData"
+          value="{{ item.categorycode }}"
+        >
           {{ item.categoryDesc }}
         </option>
       </select>
@@ -30,32 +40,54 @@
     <td>ประเภทสินค้า</td>
     <td></td>
     <td>
-      <select name="category" (blur)="searchGroup()" [(ngModel)]='categoryName'>
-      <option *ngFor="let item of categoryData" value={{item.categorycode}}>
-        {{ item.categoryDesc }}
-      </option>
-    </select></td>
+      <select name="category" (blur)="searchGroup()" [(ngModel)]="categoryName">
+        <option
+          *ngFor="let item of categoryData"
+          value="{{ item.categorycode }}"
+        >
+          {{ item.categoryDesc }}
+        </option>
+      </select>
+    </td>
   </tr>
   <tr>
     <td>กลุ่มสินค้า</td>
     <td></td>
-    <td><select name="groupname" >
-      <option *ngFor="let item of  groupData">
-        {{ item.categoryDesc }}
-      </option>
-    </select></td>
+    <td>
+      <select name="groupname">
+        <option *ngFor="let item of groupData">
+          {{ item.categoryDesc }}
+        </option>
+      </select>
+    </td>
   </tr>
-</table> 
-
-<hr>
-<h2>Test</h2>
-<table border=1 width=100%>
-
-  <tr *ngFor ="let d of resultShow">
-   <td>{{d.categoryDesc}}</td>
-  </tr>
-
 </table>
- 
 
- {{ resultShow |json}}
+<hr />
+<h2>Test</h2>
+<table border="1" width="100%">
+  <tr *ngFor="let d of resultShow">
+    <td>{{ d.categoryDesc }}</td>
+  </tr>
+</table>
+
+<p-table
+  [value]="cars"
+  styleClass="p-datatable-striped"
+  responsiveLayout="scroll"
+>
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Year</th>
+      <th>Brand</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-product>
+    <tr>
+      <td>{{ product.year }}</td>
+      <td>{{ product.brand }}</td>
+    </tr>
+  </ng-template>
+</p-table>
+
+{{ resultShow | json }}
