--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <hello name="{{ name }}"></hello>
+
+<app-item-form></app-item-form>>
 <p>Start editing to see some magic happen :)</p>
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
