--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,8 @@
   [myurlcode]="'categorymaster'"
   type="text"
 />
-<!-- {{ departmentData | json }} -->
-<!-- <div *ngFor="let item of departmentData | keyvalue">
-  {{item | json }}
-  
-</div>  -->
-<!-- {{ resultShow | json}} -->
-<button (click)="testSearch()">Search RX</button>
+
+<!-- <button (click)="testSearch()">Search RX</button>
 <hr />
 <table border="1" style="width:100%">
   <tr>
@@ -92,4 +87,4 @@
   </ng-template>
 </p-table>
 
-{{ resultShow | json }}
+{{ resultShow | json }} -->
