--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 
 
-<app-item-form></app-item-form>>
+<app-item-form></app-item-form>
 
-<p>Start editing to see some magic happen :)</p>
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
 <button (click)="getInit()">Get Depart Data</button>
