--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
+<p-menubar [model]="items"></p-menubar>
 <app-item-form></app-item-form>
 
 
@@ -11,6 +11,10 @@
   [myurlcode]="'categorymaster'"
   type="text"
 />
+
+<p-radioButton name="groupname" value="val1" label="Option 2" [(ngModel)]="selectedValue"></p-radioButton>
+
+<p-radioButton name="groupname" value="val2" label="Option 3" [(ngModel)]="selectedValue"></p-radioButton>
 
 <!-- <button (click)="testSearch()">Search RX</button>
 <hr />
