2 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <p-menubar [model]="items"></p-menubar>
-<app-item-form></app-item-form>
+<app-customer></app-customer>
 
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
