--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,6 +1,7 @@
 <p>
 customer works!
 </p>
+<button (click)='getData("department")'>Get Item</button>
 <div class="container">
   <legend>Job Portal</legend>
   <div class="row">
@@ -35,4 +36,5 @@ customer works!
       <div style="position: fixed">{{ preview }}</div>
     </div>
   </div>
-</div>
+</div> 
+{{resultShow | json}}
