--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,7 +1,7 @@
 <p>
 customer works!
 </p>
-<button (click)='getData("department")'>Get Item</button>
+<button (click)='getDataDepartment999()'>Get Item</button>
 <div class="container">
   <legend>Job Portal</legend>
   <div class="row">
@@ -37,4 +37,4 @@ customer works!
     </div>
   </div>
 </div> 
-{{resultShow | json}}
+{{AresultShow | json}}
