--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,41 +1,312 @@
-<p>
-customer works!
-<button (click)='getDataDepartment900()'>Get Item</button>
-</p>
+<p>customer works!</p>
 
-<div class="container">
-  <legend>Job Portal</legend>
-  <div class="row">
-    <div class="col col-md-8" style="overflow-y: scroll; max-height: 100vh"> 
-      PKFIELD :: <input type="text" #pkField [(ngModel)] = "customerData_PK.customerid" (change)= 'PKChange($event)'>
-
-      <button (click)='SetPK()'>Set PK</button>
-
-      <form [formGroup]="jobForm" (ngSubmit)="save()">
-        <div class="mb-3">
-          <label for="firstName" class="form-label">First Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="firstName"
-            formControlName="firstName"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="lastName" class="form-label">Last Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="lastName"
-            formControlName="lastName"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-    <div class="col col-md-4">
-      <div style="position: fixed">{{ preview }}</div>
-    </div>
+<h6>รหัสร้านค้า</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label"
+      ><p-inputMask inputId="inputmask" mask="99/99/9999"></p-inputMask>
+      <label for="inputmask">รหัสร้านค้า</label>>
+      <label for="float-input">รหัสร้านค้า</label>
+    </span>
   </div>
-</div> 
-{{AresultShow | json}}
+</div>
+<h6>รหัสสินค้า</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label p-input-icon-right">
+      <i class="pi pi-search"></i>
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">รหัสสินค้า</label>
+    </span>
+  </div>
+</div>
+<h6>URL ของสินค้าตัวนี้ จากร้านค้า</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">URL ของสินค้าตัวนี้ จากร้านค้า</label>
+    </span>
+  </div>
+</div>
+<h6>isWork</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">isWork</label>
+    </span>
+  </div>
+</div>
+<h6>รหัสแผนก</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">รหัสแผนก</label>
+    </span>
+  </div>
+</div>
+<h6>รหัสกลุ่ม</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">รหัสกลุ่ม</label>
+    </span>
+  </div>
+</div>
+<h6>groupcode</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">groupcode</label>
+    </span>
+  </div>
+</div>
+<h6>URL ของสินค้าตัวนี้</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">URL ของสินค้าตัวนี้</label>
+    </span>
+  </div>
+</div>
+<h6>ชื่อสินค้า</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ชื่อสินค้า</label>
+    </span>
+  </div>
+</div>
+<h6>ItemNameShort</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ItemNameShort</label>
+    </span>
+  </div>
+</div>
+<h6>ราคาเต็ม</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ราคาเต็ม</label>
+    </span>
+  </div>
+</div>
+<h6>ส่วนลด</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ส่วนลด</label>
+    </span>
+  </div>
+</div>
+<h6>ราคาขาย</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label"
+      ><p-inputNumber inputId="inputnumber"></p-inputNumber>
+      <label for="inputnumber">InputNumber</label>>
+      <label for="float-input">ราคาขาย</label>
+    </span>
+  </div>
+</div>
+<h6>NumSale</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">NumSale</label>
+    </span>
+  </div>
+</div>
+<h6>rating</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">rating</label>
+    </span>
+  </div>
+</div>
+<h6>Balance</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">Balance</label>
+    </span>
+  </div>
+</div>
+<h6>URL รูปหลัก</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">URL รูปหลัก</label>
+    </span>
+  </div>
+</div>
+<h6>subImageURL</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">subImageURL</label>
+    </span>
+  </div>
+</div>
+<h6>ImageListBig</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ImageListBig</label>
+    </span>
+  </div>
+</div>
+<h6>ImageListThumbA</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ImageListThumbA</label>
+    </span>
+  </div>
+</div>
+<h6>ImageListThumbB</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">ImageListThumbB</label>
+    </span>
+  </div>
+</div>
+<h6>คำบรรยาย</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">คำบรรยาย</label>
+    </span>
+  </div>
+</div>
+<h6>Description2</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">Description2</label>
+    </span>
+  </div>
+</div>
+<h6>pageDetailURL</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">pageDetailURL</label>
+    </span>
+  </div>
+</div>
+<h6>pageTitle</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">pageTitle</label>
+    </span>
+  </div>
+</div>
+<h6>pageMetaDesc</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">pageMetaDesc</label>
+    </span>
+  </div>
+</div>
+<h6>รหัสสินค้าของร้านค้า</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">รหัสสินค้าของร้านค้า</label>
+    </span>
+  </div>
+</div>
+<h6>รหัสยี่ห้อ</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label"
+      ><p-inputMask inputId="inputmask" mask="99/99/9999"></p-inputMask>
+      <label for="inputmask">รหัสยี่ห้อ</label>>
+      <label for="float-input">รหัสยี่ห้อ</label>
+    </span>
+  </div>
+</div>
+<h6>BalanceStock</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">BalanceStock</label>
+    </span>
+  </div>
+</div>
+<h6>numView</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">numView</label>
+    </span>
+  </div>
+</div>
+<h6>จำนวนรีวิว</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">จำนวนรีวิว</label>
+    </span>
+  </div>
+</div>
+<h6>shipCode</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">shipCode</label>
+    </span>
+  </div>
+</div>
+<h6>shipFeePerPiece</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">shipFeePerPiece</label>
+    </span>
+  </div>
+</div>
+<h6>lastupdate</h6>
+<div class="p-fluid grid">
+  <div class="field col-12 md:col-4">
+    <span class="p-float-label">
+      <input type="text" id="inputtext" pInputText />
+      <label for="float-input">lastupdate</label>
+    </span>
+  </div>
+</div>
