--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -20,7 +20,7 @@
         "
         class="p-error"
       >
-        ต้องป้อน ชื่อลูกค้า
+        ต้องป้อน ชื่อลูกค้า..
       </span>
     </div>
   </div>
