--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
-<button (click)="getInit()">Get Depart Data</button>
+<!-- <button (click)="getInit()">Get Depart Data</button>
 
 <input
   (appPkDirective)="resultShow = $event"
@@ -15,7 +15,7 @@
 
 <p-radioButton name="groupname" value="val1" label="Option 2" [(ngModel)]="selectedValue"></p-radioButton>
 
-<p-radioButton name="groupname" value="val2" label="Option 3" [(ngModel)]="selectedValue"></p-radioButton>
+<p-radioButton name="groupname" value="val2" label="Option 3" [(ngModel)]="selectedValue"></p-radioButton> -->
 
 <!-- <button (click)="testSearch()">Search RX</button>
 <hr />
