--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -5,7 +5,7 @@
     optionLabel="name"
     optionValue="name"
     [showClear]="true"
-    >AAAA</p-dropdown
+    >AsAAA</p-dropdown
   >
   Select {{ selectedCity1 }}
   <!--   
