--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -3,7 +3,7 @@
     [options]="department"
     [(ngModel)]="selectedCity1"
     optionLabel="name"
-    optionValue="name"
+    optionValue="code"
     [showClear]="true"
     (click) = "getCategory()"
     
