--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <p-menubar [model]="items"></p-menubar>
 <!-- <app-item-form></app-item-form> -->
-<app-customer></app-customer>
-
+<!-- <app-customer></app-customer> -->
+<app-contactus></app-contactus>
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
 <!-- <button (click)="getInit()">Get Depart Data</button>
