5 files modified, 4 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 
 <p-menubar [model]="items"></p-menubar>
+<app-frm-pro-brand-add></app-frm-pro-brand-add>
 <!-- <app-item-form></app-item-form> -->
 <!-- <app-customer></app-customer> -->
-<app-contactus></app-contactus>
+<!-- <app-contactus></app-contactus> -->
 
 <!-- <input (appPkDirective)="resultShow = $event" type="text" > -->
 <!-- <button (click)="getInit()">Get Depart Data</button>
