--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -8,6 +8,12 @@ contactus works!
   type="text" [(ngModel)] = "sText"
 /> 
 
+<input
+appDiRect2
+  
+  type="text" [(ngModel)] = "sText"
+/> 
+
 
 <input type='text' [(ngModel)] = "resultShow[0].name">
 {{ resultShow |json }}
